# mzspeclib-py

./: .gitignore  MANIFEST.in  README.md  makefile  pyproject.toml
.github/workflows/: publish.yml  test.yml
bench/: nist_msp_ftp_test.py
docs/: .readthedocs.yaml  api.rst  cli.rst  conf.py  examples.rst  index.rst
docs/_static/css/: custom.css
docs/examples/: draw_entry.py  first_n_entries.py  readme.py  validate_library.py
examples/: chinese_hamster_hcd_selected_head.mzlb.txt  draw_entry.py  fetal_brain_tiny.mzlib.txt  first_n_entries.py
mzlib/: analyte.py  attributes.py  spectrum.py  spectrum_library.py
mzlib/backends/: base.py  bibliospec.py  diann.py  encyclopedia.py  json.py  msp.py  spectronaut.py  text.py
mzlib/index/: __init__.py  base.py  memory.py  sql.py
mzlib/validate/: validator.py
mzlib/validate/rules/: all.json  base.json  convert_to_xlsx.py
mzspeclib/: __init__.py  analyte.py  annotation.py  attributes.py  cluster.py  const.py  draw.py  ontology.py  spectrum.py  spectrum_library.py  spectrum_library_collection.py  spectrum_library_index.py  utils.py
mzspeclib/backends/: __init__.py  base.py  bibliospec.py  diann.py  encyclopedia.py  json.py  memory.py  msp.py  spectronaut.py  sptxt.py  text.py  utils.py
mzspeclib/index/: __init__.py  memory.py  sql.py
mzspeclib/tools/: cli.py
mzspeclib/validate/: __init__.py  object_rule.py  semantic_rule.py  validator.py
mzspeclib/validate/rules/: base.json  convert_to_xlsx.py  test.xlsx  validator-rules-schema.json
tests/: test_cluster.py  test_index.py  test_library.py  test_library_backend.py  test_msp_attributes.py  test_spectrum.py  test_validate.py
tests/test_data/: bad_peak_annotations.mzspeclib.txt  chinese_hamster_hcd_selected_head.mzlb.json  chinese_hamster_hcd_selected_head.mzlb.txt  clusters_example.mzlb  complex_interpretations.mzspeclib.txt  complex_interpretations_with_members.mzlb.json  complex_interpretations_with_members.mzspeclib.json  complex_interpretations_with_members.mzspeclib.txt  generate_annotations.py
viewer/: README.md  tables.py  viewer.py
